[gd_scene load_steps=6 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Menu.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_top = -0.799011
margin_right = 1026.0
margin_bottom = 599.201
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 459.899
margin_top = 548.356
margin_right = 504.899
margin_bottom = 587.356
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
visible = false
anchor_left = 0.503
anchor_top = 0.5
anchor_right = 0.503
anchor_bottom = 0.5
margin_left = -471.077
margin_top = -171.606
margin_right = 26.923
margin_bottom = -26.6063
rect_rotation = -11.6
custom_fonts/font = SubResource( 1 )
text = "Arrive Ã  ton lit le plus vite possible !"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0.403922 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -145.0
margin_top = -409.0
margin_right = 109.0
margin_bottom = -354.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreFinal" type="Label" parent="."]
margin_left = 751.383
margin_top = 547.0
margin_right = 961.383
margin_bottom = 590.0
custom_fonts/font = SubResource( 2 )
text = "Score Final :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musique" type="CheckButton" parent="."]
margin_left = 299.046
margin_top = 480.626
margin_right = 375.046
margin_bottom = 520.626
rect_scale = Vector2( 1.5, 1.5 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0.403922 )
margin_left = 368.0
margin_top = 284.8
margin_right = 620.0
margin_bottom = 340.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quitter" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0.403922 )
margin_left = 368.0
margin_top = 382.0
margin_right = 621.0
margin_bottom = 438.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="button_down" from="Musique" to="." method="_on_Musique_button_down"]
[connection signal="button_up" from="Musique" to="." method="_on_Musique_button_up"]
[connection signal="pressed" from="Musique" to="." method="_on_Musique_pressed"]
[connection signal="pressed" from="Quitter" to="." method="_on_Quitter_pressed"]
